--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<div class="row">
-    <h1 class="display-1">Anonimartists</h1>
+<app-navbar></app-navbar>
+<div class="container mt-4 mb-4">
+    <img src={{imageToDay}} class="img-fluid" style="position: absolute; right: 0; top: 0; min-width: 100%; min-height: 100%; z-index: -100; opacity: 0.20;">
+    <router-outlet></router-outlet>
 </div>
